; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/ice1712/extr_prodigy_hifi.c_ak4396_write.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/ice1712/extr_prodigy_hifi.c_ak4396_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_ice1712 = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }

@AK4396_CSN = common dso_local global i32 0, align 4
@AK4396_CCLK = common dso_local global i32 0, align 4
@AK4396_CDTI = common dso_local global i32 0, align 4
@AK4396_ADDR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_ice1712*, i32, i32)* @ak4396_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ak4396_write(%struct.snd_ice1712* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.snd_ice1712*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.snd_ice1712* %0, %struct.snd_ice1712** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.snd_ice1712*, %struct.snd_ice1712** %4, align 8
  %9 = load i32, i32* @AK4396_CSN, align 4
  %10 = load i32, i32* @AK4396_CCLK, align 4
  %11 = or i32 %9, %10
  %12 = load i32, i32* @AK4396_CDTI, align 4
  %13 = or i32 %11, %12
  %14 = call i32 @snd_ice1712_gpio_set_dir(%struct.snd_ice1712* %8, i32 %13)
  %15 = load %struct.snd_ice1712*, %struct.snd_ice1712** %4, align 8
  %16 = load i32, i32* @AK4396_CSN, align 4
  %17 = load i32, i32* @AK4396_CCLK, align 4
  %18 = or i32 %16, %17
  %19 = load i32, i32* @AK4396_CDTI, align 4
  %20 = or i32 %18, %19
  %21 = xor i32 %20, -1
  %22 = call i32 @snd_ice1712_gpio_set_mask(%struct.snd_ice1712* %15, i32 %21)
  %23 = load %struct.snd_ice1712*, %struct.snd_ice1712** %4, align 8
  %24 = load i32, i32* @AK4396_CSN, align 4
  %25 = call i32 @set_gpio_bit(%struct.snd_ice1712* %23, i32 %24, i32 0)
  %26 = load i32, i32* @AK4396_ADDR, align 4
  %27 = and i32 %26, 3
  %28 = shl i32 %27, 14
  %29 = or i32 %28, 8192
  %30 = load i32, i32* %5, align 4
  %31 = and i32 %30, 31
  %32 = shl i32 %31, 8
  %33 = or i32 %29, %32
  %34 = load i32, i32* %6, align 4
  %35 = and i32 %34, 255
  %36 = or i32 %33, %35
  store i32 %36, i32* %7, align 4
  %37 = load %struct.snd_ice1712*, %struct.snd_ice1712** %4, align 8
  %38 = load i32, i32* %7, align 4
  %39 = call i32 @ak4396_send_word(%struct.snd_ice1712* %37, i32 %38)
  %40 = load %struct.snd_ice1712*, %struct.snd_ice1712** %4, align 8
  %41 = load i32, i32* @AK4396_CSN, align 4
  %42 = call i32 @set_gpio_bit(%struct.snd_ice1712* %40, i32 %41, i32 1)
  %43 = call i32 @udelay(i32 1)
  %44 = load %struct.snd_ice1712*, %struct.snd_ice1712** %4, align 8
  %45 = load %struct.snd_ice1712*, %struct.snd_ice1712** %4, align 8
  %46 = getelementptr inbounds %struct.snd_ice1712, %struct.snd_ice1712* %45, i32 0, i32 0
  %47 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %46, i32 0, i32 0
  %48 = load i32, i32* %47, align 4
  %49 = call i32 @snd_ice1712_gpio_set_mask(%struct.snd_ice1712* %44, i32 %48)
  %50 = load %struct.snd_ice1712*, %struct.snd_ice1712** %4, align 8
  %51 = load %struct.snd_ice1712*, %struct.snd_ice1712** %4, align 8
  %52 = getelementptr inbounds %struct.snd_ice1712, %struct.snd_ice1712* %51, i32 0, i32 0
  %53 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %52, i32 0, i32 1
  %54 = load i32, i32* %53, align 4
  %55 = call i32 @snd_ice1712_gpio_set_dir(%struct.snd_ice1712* %50, i32 %54)
  ret void
}

declare dso_local i32 @snd_ice1712_gpio_set_dir(%struct.snd_ice1712*, i32) #1

declare dso_local i32 @snd_ice1712_gpio_set_mask(%struct.snd_ice1712*, i32) #1

declare dso_local i32 @set_gpio_bit(%struct.snd_ice1712*, i32, i32) #1

declare dso_local i32 @ak4396_send_word(%struct.snd_ice1712*, i32) #1

declare dso_local i32 @udelay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
